- Commencement du backoffice admin - Rajout d'une table tf_user_invited pour gérer le système d'inscription qui arrivera bientôt - Rajout d'un champ "banned" sur la table tf_user pour introduire un système de banissement

--- a/src/views/base_dashboard.html
+++ b/src/views/base_dashboard.html
@@ -53,7 +53,13 @@
           </a>
         </div>
 
-        <div class="nav-element nav-bottom" id="chat-nav">
+        <div class="nav-element nav-bottom" id="admin-nav">
+          <a href="/dashboard/admin">
+            <i class="fas fa-user-cog"></i>
+            {{ translate 'DASHBOARD_MENU_ADMIN' }}
+          </a>
+        </div>
+        <div class="nav-element" id="chat-nav">
           <a href="/dashboard/forum">
             <i class="fas fa-comments"></i>
             {{ translate 'DASHBOARD_MENU_FORUM' }}
