--- a/public/styles/testify_dashboard.css
+++ b/public/styles/testify_dashboard.css
@@ -47,6 +47,7 @@ body {
 .side-nav .nav-element {
   margin-bottom: 35px;
   text-align: center;
+  font-size: 0.8rem;
 }
 
 .side-nav .nav-element > a.menu-active {
@@ -85,6 +86,7 @@ body {
   display: flex;
   justify-content: space-between;
   z-index: 1;
+  align-items: center;
 }
 
 .header-nav > h1 {
