- Inscription fermée implémentée - Amélioration du router

--- a/src/views/base_home.html
+++ b/src/views/base_home.html
@@ -23,8 +23,7 @@
       </a>
       <h1>{% block navtitle %}{% endblock %}</h1>
       <ul class="btn-group-1">
-        <li><a href="/inscription">{{ translate 'HOME_NAVBAR_CONNECT' }}</a></li>
-        <li><a href="/connexion">{{ translate 'HOME_NAVBAR_SUBSCRIBE' }}</a></li>
+        <li><a href="/connexion">{{ translate 'HOME_NAVBAR_CONNECT' }}</a></li>
       </ul>
       <div class="dropdown">
         <button class="dropbtn">{{ translate 'LANGUAGE_NAME' }} <i class="fas fa-caret-down"></i></button>
