--- a/src/views/base_dashboard.html
+++ b/src/views/base_dashboard.html
@@ -53,7 +53,8 @@
           </a>
         </div>
 
-        <div class="nav-element nav-bottom" id="admin-nav">
+        <div class="nav-bottom"></div>
+        <div class="nav-element" id="admin-nav" style="display: none">
           <a href="/dashboard/admin">
             <i class="fas fa-user-cog"></i>
             {{ translate 'DASHBOARD_MENU_ADMIN' }}
@@ -82,6 +83,9 @@
     <div class="main">
       <nav class="header-nav">
         <h1 id="navtitle">{% block navtitle %}{% endblock %}</h1>
+        <a href="/dashboard/profile" style="margin-right: 15px">
+          <i class="far fa-user-circle fa-2x" style="color: white"></i>
+        </a>
         <div class="dropdown">
           <button class="dropbtn">{{ translate 'LANGUAGE_NAME' }} <i class="fas fa-caret-down"></i></button>
           <div class="dropdown-content">
