--- a/src/views/home/connexion.html
+++ b/src/views/home/connexion.html
@@ -18,13 +18,11 @@
     <div class="row justify-content-center">
       <form class="form text-center">
         <div>
-          <input type="email" class="form-field" name="email" id="email" placeholder="{{ translate 'HOME_CONNECT_EMAIL' }}">
+          <input type="email" class="form-field" name="email" id="email" placeholder="{{ translate 'HOME_CONNECT_EMAIL' }}" required>
         </div>
-
         <br>
-
         <div>
-          <input type="password" class="form-field" name="password" id="password" placeholder="{{ translate 'HOME_CONNECT_PASSWORD' }}">
+          <input type="password" class="form-field" name="password" id="password" placeholder="{{ translate 'HOME_CONNECT_PASSWORD' }}" required>
         </div>
 
         <br>
