--- a/src/views/home/inscription.html
+++ b/src/views/home/inscription.html
@@ -1,11 +1,11 @@
 {% extends 'base_home.html' %}
 
 {% block title %}
-Inscription
+{{ translate 'HOME_REGISTER_TITLE' }}
 {% endblock %}
 
 {% block navtitle %}
-Inscription
+{{ translate 'HOME_REGISTER_TITLE' }}
 {% endblock %}
 
 {% block body %}
@@ -13,7 +13,7 @@ Inscription
 <section>
   <div class="container">
     <div class="row justify-content-center">
-      <h2>Inscription</h2>
+      <h2>{{ translate 'HOME_REGISTER_TITLE' }}</h2>
     </div>
     <div class="row justify-content-center" id="invite-wait">
       <i class="fas fa-circle-notch fa-spin fa-2x"></i>
@@ -21,28 +21,28 @@ Inscription
     <div class="row justify-content-center" id="invite-form" style="display: none">
       <form class="form">
         <div class="row" style="margin-bottom: 15px">
-          <label class="col-4 col-form-label" for="member-email">Email</label>
+          <label class="col-4 col-form-label" for="member-email">{{ translate 'HOME_REGISTER_EMAIL' }}</label>
           <input class="form-field col-8" type="email" name="member-email" id="member-email" readonly>
         </div>
         <div class="row" style="margin-bottom: 15px">
-          <label class="col-4 col-form-label" for="member-lastname">Nom</label>
+          <label class="col-4 col-form-label" for="member-lastname">{{ translate 'HOME_REGISTER_LASTNAME' }}</label>
           <input class="form-field col-8" type="text" name="member-lastname" id="member-lastname" required>
         </div>
         <div class="row" style="margin-bottom: 15px">
-          <label class="col-4 col-form-label" for="member-firstname">Prénom</label>
+          <label class="col-4 col-form-label" for="member-firstname">{{ translate 'HOME_REGISTER_FIRSTNAME' }}</label>
           <input class="form-field col-8" type="text" name="member-firstname" id="member-firstname" required>
         </div>
         <div class="row" style="margin-bottom: 15px">
-          <label class="col-4 col-form-label" for="member-password">Mot de passe</label>
+          <label class="col-4 col-form-label" for="member-password">{{ translate 'HOME_REGISTER_PASSWORD' }}</label>
           <input class="form-field col-8" type="password" name="member-password" id="member-password" required>
         </div>
         <div class="row" style="margin-bottom: 25px">
-          <label class="col-4 col-form-label" for="member-password-check">Mot de passe</label>
+          <label class="col-4 col-form-label" for="member-password-check">{{ translate 'HOME_REGISTER_PASSWORDCHECK' }}</label>
           <input class="form-field col-8" type="password" name="member-password-check" id="member-password-check" required>
         </div>
         <div class="row justify-content-center">
           <button type="button" class="btn btn-success" id="btn-register">
-            S'inscrire <i id="wait-register" class="fas fa-circle-notch fa-spin" style="display: none"></i>
+            {{ translate 'HOME_REGISTER_REGISTERBTN' }} <i id="wait-register" class="fas fa-circle-notch fa-spin" style="display: none"></i>
           </button>
         </div>
       </form>
