--- a/src/views/mails/invite.html
+++ b/src/views/mails/invite.html
@@ -229,21 +229,21 @@
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 30px; padding-left: 30px; padding-top: 10px; padding-bottom: 0px; font-family: 'Trebuchet MS', Tahoma, sans-serif"><![endif]-->
 <div style="color:#555555;font-family:'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif;line-height:1.2;padding-top:10px;padding-right:30px;padding-bottom:0px;padding-left:30px;">
 <div style="font-size: 12px; line-height: 1.2; font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Tahoma, sans-serif; color: #555555; mso-line-height-alt: 14px;">
-<p style="font-size: 14px; line-height: 1.2; mso-line-height-alt: 17px; margin: 0;"><strong><span style="font-size: 46px;">Bienvenue, <span style="color: #3d3bee; font-size: 46px;">{{ user }}</span>!</span></strong></p>
+<p style="font-size: 14px; line-height: 1.2; mso-line-height-alt: 17px; margin: 0;"><strong><span style="font-size: 46px;">{{ translate 'API_ADMIN_INVITE_MAIL_WELCOME' }}, <span style="color: #3d3bee; font-size: 46px;">{{ user }}</span>!</span></strong></p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 30px; padding-left: 30px; padding-top: 15px; padding-bottom: 5px; font-family: Arial, sans-serif"><![endif]-->
 <div style="color:#555555;font-family:'Open Sans', Helvetica, Arial, sans-serif;line-height:1.5;padding-top:15px;padding-right:30px;padding-bottom:5px;padding-left:30px;">
 <div style="font-size: 12px; line-height: 1.5; font-family: 'Open Sans', Helvetica, Arial, sans-serif; color: #555555; mso-line-height-alt: 18px;">
-<p style="font-size: 12px; line-height: 1.5; mso-line-height-alt: 18px; margin: 0;"><strong><span style="font-size: 20px;">Vous avez été invité à vous inscrire sur la plateforme Testify par l'établissement XXXX. Cette plateforme vous permet de consulter vos résultats de tests psychomoteurs passé dans votre établissement.<br/></span></strong></p>
+<p style="font-size: 12px; line-height: 1.5; mso-line-height-alt: 18px; margin: 0;"><strong><span style="font-size: 20px;">{{ translate 'API_ADMIN_INVITE_MAIL_EXPLAIN' }}<br/></span></strong></p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 30px; padding-left: 30px; padding-top: 15px; padding-bottom: 20px; font-family: Arial, sans-serif"><![endif]-->
 <div style="color:#7C7C7C;font-family:'Open Sans', Helvetica, Arial, sans-serif;line-height:1.5;padding-top:15px;padding-right:30px;padding-bottom:20px;padding-left:30px;">
 <div style="font-size: 12px; line-height: 1.5; font-family: 'Open Sans', Helvetica, Arial, sans-serif; color: #7C7C7C; mso-line-height-alt: 18px;">
-<p style="font-size: 16px; line-height: 1.5; mso-line-height-alt: 24px; margin: 0;"><span style="font-size: 16px;">Vous disposez de 72h pour répondre à l'invitation. Si ne vous inscrivez pas dans le temps imparti vous devrez contacter un responsable de votre établissement de tests afin de redemander une nouvelle invitation.</span></p>
+<p style="font-size: 16px; line-height: 1.5; mso-line-height-alt: 24px; margin: 0;"><span style="font-size: 16px;">{{ translate 'API_ADMIN_INVITE_MAIL_WARN' }}</span></p>
 <p style="font-size: 12px; line-height: 1.5; mso-line-height-alt: 18px; margin: 0;"> </p>
 </div>
 </div>
@@ -270,7 +270,7 @@
 <!--<![endif]-->
 <div align="center" class="button-container" style="padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0" style="border-spacing: 0; border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;"><tr><td style="padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px" align="center"><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="{{ link }}" style="height:54pt; width:307.5pt; v-text-anchor:middle;" arcsize="13%" stroke="false" fillcolor="#3D3BEE"><w:anchorlock/><v:textbox inset="0,0,0,0"><center style="color:#ffffff; font-family:Arial, sans-serif; font-size:26px"><![endif]--><a href="{{ link }}" style="-webkit-text-size-adjust: none; text-decoration: none; display: inline-block; color: #ffffff; background-color: #3D3BEE; border-radius: 9px; -webkit-border-radius: 9px; -moz-border-radius: 9px; width: auto; width: auto; border-top: 1px solid #3D3BEE; border-right: 1px solid #3D3BEE; border-bottom: 1px solid #3D3BEE; border-left: 1px solid #3D3BEE; padding-top: 10px; padding-bottom: 10px; font-family: 'Open Sans', Helvetica, Arial, sans-serif; text-align: center; mso-border-alt: none; word-break: keep-all;" target="_blank"><span style="padding-left:45px;padding-right:45px;font-size:26px;display:inline-block;">
-<span style="font-size: 16px; line-height: 2; mso-line-height-alt: 32px;"><span style="font-size: 26px; line-height: 52px;"><strong>S'INSCRIRE MAINTENANT</strong></span></span>
+<span style="font-size: 16px; line-height: 2; mso-line-height-alt: 32px;"><span style="font-size: 26px; line-height: 52px;"><strong>{{ translate 'API_ADMIN_INVITE_MAIL_REGISTERBTN' }}</strong></span></span>
 </span></a>
 <!--[if mso]></center></v:textbox></v:roundrect></td></tr></table><![endif]-->
 </div>
@@ -332,7 +332,7 @@
 <!--[if mso]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding-right: 10px; padding-left: 10px; padding-top: 10px; padding-bottom: 10px; font-family: Arial, sans-serif"><![endif]-->
 <div style="color:#838383;font-family:'Open Sans', Helvetica, Arial, sans-serif;line-height:1.5;padding-top:10px;padding-right:10px;padding-bottom:10px;padding-left:10px;">
 <div style="font-size: 12px; line-height: 1.5; font-family: 'Open Sans', Helvetica, Arial, sans-serif; color: #838383; mso-line-height-alt: 18px;">
-<p style="font-size: 14px; line-height: 1.5; text-align: center; mso-line-height-alt: 21px; margin: 0;"><span style="color: #000000; font-size: 14px;"><strong>Testify</strong></span>, Tous droits réservés.</p>
+<p style="font-size: 14px; line-height: 1.5; text-align: center; mso-line-height-alt: 21px; margin: 0;"><span style="color: #000000; font-size: 14px;"><strong>Testify</strong></span>, {{ translate 'API_ADMIN_INVITE_MAIL_COPYRIGHT' }}.</p>
 </div>
 </div>
 <!--[if mso]></td></tr></table><![endif]-->
