--- a/src/views/base_home.html
+++ b/src/views/base_home.html
@@ -24,6 +24,7 @@
       <h1>{% block navtitle %}{% endblock %}</h1>
       <ul class="btn-group-1">
         <li><a href="/connexion">{{ translate 'HOME_NAVBAR_CONNECT' }}</a></li>
+        <li><a href="/contact">{{ translate 'HOME_NAVBAR_CONTACT' }}</a></li>
       </ul>
       <div class="dropdown">
         <button class="dropbtn">{{ translate 'LANGUAGE_NAME' }} <i class="fas fa-caret-down"></i></button>
@@ -39,7 +40,7 @@
 
     <footer>
       <p>
-        <a href="/conditions_generales_de_ventes">{{ translate 'CGV' }}</a> &#xa9; 2019, Testify.fr Powered by our own skills
+        <a href="/cgu">{{ translate 'CGU' }}</a> &#xa9; 2019, Testify.fr Powered by our own skills
       </p>
     </footer>
 
