--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -18,6 +18,7 @@
     <li><a href="#clients">{{ translate 'HOME_MENU_CLIENTS' }}</a></li>
     <li><a href="#review">{{ translate 'HOME_MENU_REVIEW' }}</a></li>
     <li><a href="#client">Infinite Measures</a></li>
+    <li><a href="/faq">FAQ</a></li>
   </ul>
 </div>
 
